syntax = "proto3";

option go_package = "github.com/ozontech/seq-db/pkg/storeapi;storeapi";

package api;

import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service StoreApi {
  rpc Bulk(BulkRequest) returns (google.protobuf.Empty) {}

  rpc Search(SearchRequest) returns (SearchResponse) {}

  rpc StartAsyncSearch(StartAsyncSearchRequest) returns (StartAsyncSearchResponse) {}

  rpc FetchAsyncSearchResult(FetchAsyncSearchResultRequest) returns (FetchAsyncSearchResultResponse) {}

  rpc CancelAsyncSearch(CancelAsyncSearchRequest) returns (CancelAsyncSearchResponse) {}

  rpc DeleteAsyncSearch(DeleteAsyncSearchRequest) returns (DeleteAsyncSearchResponse) {}
  
  rpc GetAsyncSearchesList(GetAsyncSearchesListRequest) returns (GetAsyncSearchesListResponse) {}

  rpc Fetch(FetchRequest) returns (stream BinaryData) {}

  rpc Status(StatusRequest) returns (StatusResponse) {}
}

message BulkRequest {
  int64 count = 1;
  bytes docs = 2;
  bytes metas = 3;
}

message BinaryData {
  bytes data = 1;
}

enum AggFunc {
  AGG_FUNC_COUNT = 0;
  AGG_FUNC_SUM = 1;
  AGG_FUNC_MIN = 2;
  AGG_FUNC_MAX = 3;
  AGG_FUNC_AVG = 4;
  AGG_FUNC_QUANTILE = 5;
  AGG_FUNC_UNIQUE = 6;
}

enum Order {
  ORDER_DESC = 0;
  ORDER_ASC = 1;
}

message AggQuery {
  string field = 1;
  reserved 2;
  string group_by = 3;
  AggFunc func = 4;
  repeated double quantiles = 5;
  int64 interval = 6;
}

message SearchRequest {
  string query = 1;
  int64 from = 2;
  int64 to = 3;
  int64 size = 4;
  int64 offset = 5;
  int64 interval = 6;
  string aggregation = 7 [deprecated = true];
  bool explain = 8;
  bool with_total = 10;
  string aggregation_filter = 11 [deprecated = true];
  repeated AggQuery aggs = 12;
  Order order = 13;
}

message SearchResponse {
  message Id {
    uint64 mid = 1;
    uint64 rid = 2;
  }

  message IdWithHint {
    Id     id = 1;
    string hint = 3;
  }

  message Histogram {
    double min = 1;
    double max = 2;
    double sum = 3;
    int64 total = 4;
    int64 not_exists = 5;
    repeated double samples = 6;
  }

  message Bin {
    string label = 1;
    google.protobuf.Timestamp ts = 2;
    Histogram hist = 3;
  }

  message Agg {
    map<string, uint64> agg = 1 [deprecated = true];
    map<string, Histogram> agg_histogram = 2;
    int64 not_exists = 3;
    // Timeseries will be presented as:
    // [
    //   { (foo, ts1) -> (val) },
    //   { (bar, ts1) -> (val) },
    //   { (foo, ts2) -> (val) }
    // ]
    repeated Bin timeseries = 4;
  }

  bytes data = 1 [deprecated = true];
  repeated IdWithHint id_sources = 2;
  map<uint64, uint64> histogram = 3;
  repeated Agg aggs = 4;
  uint64 total = 5;
  repeated string errors = 6;
  SearchErrorCode code = 7;
  optional ExplainEntry explain = 8;
}

message ExplainEntry {
  string message = 1;
  google.protobuf.Duration duration = 2;
  repeated ExplainEntry children = 3;
}

enum SearchErrorCode {
  NO_ERROR = 0;
  INGESTOR_QUERY_WANTS_OLD_DATA = 1;
  TOO_MANY_UNIQ_VALUES = 2;
  TOO_MANY_FRACTIONS_HIT = 3;
}

message StartAsyncSearchRequest {
  string search_id = 1;
  google.protobuf.Duration retention = 2;
  string query = 3;
  int64 from = 4;
  int64 to = 5;
  repeated AggQuery aggs = 6;
  int64 histogram_interval = 7;
  bool with_docs = 8;
  int64 size = 9;
}

message StartAsyncSearchResponse {}

message FetchAsyncSearchResultRequest {
  string search_id = 1;
  int32 size = 2;
  int32 offset = 3;
  Order order = 4;
}

enum AsyncSearchStatus {
  AsyncSearchStatusInProgress = 0;
  AsyncSearchStatusDone = 1;
  AsyncSearchStatusCanceled = 2;
  AsyncSearchStatusError = 3;
}

message FetchAsyncSearchResultResponse {
  AsyncSearchStatus status = 1;
  SearchResponse response = 2;
  google.protobuf.Timestamp started_at = 3;
  google.protobuf.Timestamp expires_at = 4;
  optional google.protobuf.Timestamp canceled_at = 5;
  uint64 fracs_done = 6;
  uint64 fracs_queue = 7;
  uint64 disk_usage = 8;

  repeated AggQuery aggs = 9;
  int64 histogram_interval = 10;
  
  string query = 11;
  google.protobuf.Timestamp from = 12;
  google.protobuf.Timestamp to = 13;
  google.protobuf.Duration retention = 14;
  bool with_docs = 15;
  int64 size = 16;
}

message CancelAsyncSearchRequest{
  string search_id = 1;
}

message CancelAsyncSearchResponse{}

message DeleteAsyncSearchRequest {
  string search_id = 1;
}

message DeleteAsyncSearchResponse {}

message GetAsyncSearchesListRequest {
  optional AsyncSearchStatus status = 1;
  repeated string ids = 2; 
}

message GetAsyncSearchesListResponse {
  repeated AsyncSearchesListItem searches = 1;
}

message AsyncSearchesListItem {
  string search_id = 1;
  AsyncSearchStatus status = 2;
  google.protobuf.Timestamp started_at = 3;
  google.protobuf.Timestamp expires_at = 4;
  optional google.protobuf.Timestamp canceled_at = 5;
  uint64 fracs_done = 6;
  uint64 fracs_queue = 7;
  uint64 disk_usage = 8;

  repeated AggQuery aggs = 9;
  int64 histogram_interval = 10;
  
  string query = 11;
  google.protobuf.Timestamp from = 12;
  google.protobuf.Timestamp to = 13;
  google.protobuf.Duration retention = 14;
  bool with_docs = 15;
  int64 size = 16;
}

message IdWithHint {
  string id = 1;
  string hint = 2;
}

message FetchRequest {
  message FieldsFilter {
    repeated string fields = 1;
    // see seqproxyapi.FetchRequest.FieldsFilter.allow_list for details.
    bool allow_list = 2;
  }
  repeated string ids = 1;
  bool explain = 3;
  repeated IdWithHint ids_with_hints = 4;
  FieldsFilter fields_filter = 5;
}

message StatusRequest {}

message StatusResponse {
  google.protobuf.Timestamp oldest_time = 1;
}
